...
    final String password = _passwordController.text;
    final String username = _usernameController.text;
    final String email = _emailController.text;
    final String surname = _noController.text;

    if(!isValidString(email, r'^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$')){showToast(message: "Invalid email address"); setState((){_isLoading = false;}); return;}
    if(!isValidString(password, r'^(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$')){showToast(message: "Invalid password:\n\nAt least 1 uppercase letter\nAt least 1 lowercase letter\nAt least 1 number\nAt least 1 special character (!@#\$%^&*)\nA minimum length of 8"); setState((){_isLoading = false;}); return;}
    if(!isValidString(surname, r'^[a-zA-Z]+$')){showToast(message: "Invalid surname"); setState((){_isLoading = false;}); return;}
    if(!isValidString(username, r'^[a-zA-Z]+$')){showToast(message: "Invalid name"); setState((){_isLoading = false;}); return;}

    try{
      final firestore = FirebaseFirestore.instance;
      final querySnapshot = await firestore
...
                padding: const EdgeInsets.symmetric(vertical: 5, horizontal: 20),
                child: Column(
                  mainAxisSize: MainAxisSize.min,
                  children: <Widget>[
                     // Space before the Login text
                    const Text(
                      'Sign up',
                      style: TextStyle(
                        fontSize: 43,
                        fontWeight: FontWeight.w500,
                        color: Color(0xFF58C6A9),
                      ),
                    ),
                    const SizedBox(height: 8), // Space between the Login text and text boxes
                    TextField(
                      controller: _usernameController,
                      decoration: InputDecoration(
                        labelText: 'Name',
                        labelStyle: TextStyle(
                          color: Colors.grey.shade700, // Darker grey for label text
                          fontWeight: FontWeight.w500,
                          fontSize: 22,
                        ),
                        floatingLabelStyle: TextStyle(
...
                      ),
                    ),
                    const SizedBox(height: 20),
                    TextField(
                      controller: _emailController,
                      decoration: InputDecoration(
                        labelText: 'Email',
                        labelStyle: TextStyle(
                          color: Colors.grey.shade700, // Darker grey for label text
                          fontWeight: FontWeight.w500,
                          fontSize: 22,
                        ),
                        floatingLabelStyle: TextStyle(
...
                    ),
                    const SizedBox(height: 20),
                    // Password Text Field
                    TextField(
                      controller: _passwordController,
                      decoration: InputDecoration(
                        labelText: 'Password',
                        labelStyle: TextStyle(
                          color: Colors.grey.shade700,
                          fontWeight: FontWeight.w500,
                          fontSize: 22,
                        ),
                        floatingLabelStyle: TextStyle(
...
                    ),
                    const SizedBox(height: 5),
                    Row(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        GestureDetector(
                          key: const Key('google'),
                          onTap: () {
                            _signUpWithGoogle();
                            // Add functionality to signup with Google
                          },
                          child: Padding(
                            padding: const EdgeInsets.symmetric(horizontal: 40),
...
                        Navigator.push(
                          context,
                          MaterialPageRoute(builder: (context) => const LoginPage()),
                        );
                      },
                      child: const Text(
                        "Have an account? Login",
                        style: TextStyle(fontWeight: FontWeight.bold, fontSize: 20, color: Color(0xFF58C6A9)),
                      ),
                    ),
                  ],
                ),
                ),
...
