...

      if (user != null) {
        await FirebaseFirestore.instance.collection('users').doc(user.uid).set({
          'fullName': _nameController.text,
          'email': _emailController.text,
          'phoneNumber': _phoneController.text,
          'password': _passwordController.text,
        }, SetOptions(merge: true));  // Use merge: true to update only the provided fields

        showToast(message: 'Profile Updated Successfully!');
        // Optionally, navigate back or to another page
        Navigator.of(context).pushReplacement(
          MaterialPageRoute(
...
